# LimeSuiteNG

./: CMakeLists.txt  Changelog.txt  README.md  clang-format-all.sh  install_dependencies.sh  set_debian_changelog_codename.sh
.github/workflows/: cmake.yml  formatting.yml  gtest.yml  packaging.yml
GUI/: CMakeLists.txt  limeGUIFrame.cpp
GUI/boards/: CMakeLists.txt  pnlBoardControls.cpp  pnlBuffers.h
GUI/fftviewer_wxgui/: fftviewer_frFFTviewer.cpp  fftviewer_frFFTviewer.h
GUI/oglGraph/: CMakeLists.txt  OpenGLGraph.cpp
GUI/utility/: pnlMiniLog.cpp
cli/: CMakeLists.txt  common.h  limeOEM.cpp  limeSync.cpp  limeTRX.cpp
cmake/: CheckDebianChangelogVersion.cmake
debian/: .gitignore  README  changelog  control  copyright  liblimesuiteng.changelog  limepcie-dkms.changelog  limepcie-dkms.install  limepcie.dkms  limesuiteng-cli.install  limesuiteng-dev.install  limesuiteng-gnuradio.install  limesuiteng-gui.install  limesuiteng-legacyapi.changelog  limesuiteng-legacyapi.install  limesuiteng-liblimesuiteng-legacyapi.install  limesuiteng-liblimesuiteng.install  limesuiteng-soapysdr.install  limesuiteng-udev.install  rules  set_debian_changelog_codenames.sh
docs/development/buildSource/: buildWindows.rst
docs/development/migration/: index.rst
docs/development/migration/LMS/: changes.rst
docs/doxygen/: CMakeLists.txt  DoxygenConfig.in
docs/gettingStarted/common/: cliTools.rst
docs/gettingStarted/linux/: packages.rst
docs/gettingStarted/plugins/: gnuradio.rst
drivers/: CMakeLists.txt
drivers/linux/: CMakeLists.txt
drivers/linux/limepcie/: .gitignore  CMakeLists.txt  dkms.conf.in  limepcie_core.c  limeuart.c  limeuart.h  litex.h  version.h.in  version.in.h
drivers/linux/limepcie/bsp/: csr.h
drivers/linux/limepcie/cmake/: add_kernel_module.cmake
embedded/: CMakeLists.txt
embedded/lms7002m/: lms7002m.c  privates.c
plugins/: CMakeLists.txt
plugins/Desktop/: CMakeLists.txt
plugins/HDSDR/: CMakeLists.txt
plugins/Soapy_limesuiteng/: CMakeLists.txt
plugins/amarisoft-plugin/: CMakeLists.txt  configExample.cfg
plugins/gr-limesdr/docs/doxygen/: CMakeLists.txt  Doxyfile.in
plugins/gr-limesuiteng/: .gitignore  CMakeLists.txt  MANIFEST.yml
plugins/gr-limesuiteng/.conda/: README.md
plugins/gr-limesuiteng/.conda/recipe/: meta.yaml
plugins/gr-limesuiteng/apps/: CMakeLists.txt
plugins/gr-limesuiteng/cmake/Modules/: gnuradio-limesuitengConfig.cmake
plugins/gr-limesuiteng/docs/: CMakeLists.txt  README.limesuiteng
plugins/gr-limesuiteng/docs/doxygen/: CMakeLists.txt  Doxyfile.in
plugins/gr-limesuiteng/docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
plugins/gr-limesuiteng/docs/doxygen/other/: group_defs.dox  main_page.dox
plugins/gr-limesuiteng/examples/: CMakeLists.txt  FM_receiver.grc  spectrum_analyzer.grc
plugins/gr-limesuiteng/grc/: CMakeLists.txt  limesuiteng_sdrdevice_sink.block.yml  limesuiteng_sdrdevice_source.block.yml
plugins/gr-limesuiteng/include/gnuradio/limesuiteng/: CMakeLists.txt  api.h  sdrdevice_sink.h  sdrdevice_source.h
plugins/gr-limesuiteng/lib/: CMakeLists.txt  sdrdevice_block_base.cc  sdrdevice_block_base.h  sdrdevice_manager.cc  sdrdevice_manager.h  sdrdevice_sink_impl.cc  sdrdevice_sink_impl.h  sdrdevice_source_impl.cc  sdrdevice_source_impl.h
plugins/gr-limesuiteng/python/limesuiteng/: CMakeLists.txt  __init__.py
plugins/gr-limesuiteng/python/limesuiteng/bindings/: CMakeLists.txt  failed_conversions.txt  python_bindings.cc  sdrdevice_sink_python.cc  sdrdevice_source_python.cc
plugins/gr-limesuiteng/python/limesuiteng/bindings/docstrings/: sdrdevice_sink_pydoc_template.h  sdrdevice_source_pydoc_template.h
plugins/soapysdr/: CMakeLists.txt  Settings.cpp  Soapy_limesuiteng.h  Streaming.cpp
src/: CMakeLists.txt  OEMTesting.cpp  limesuiteng.pc.in
src/API/: LMS_APIWrapper.cpp  LimePlugin.cpp
src/DSP/FFT/: CMakeLists.txt
src/DSP/math/: math.h
src/FPGA/: FPGA_common.cpp
src/boards/: BoardSupportLoader.in.cpp  CMakeLists.txt  DeviceFactoryPCIe.cpp  LMS7002M_SDRDevice.cpp  LMS7002M_SDRDevice.h
src/boards/LimeSDR/: CMakeLists.txt  LMS64C_ADF_Over_USB.cpp  LMS64C_ADF_Over_USB.h  LimeSDR.cpp  LimeSDR.h
src/boards/LimeSDR_Mini/: LimeNET_Micro.cpp  LimeNET_Micro.h  LimeSDR_Mini.cpp  LimeSDR_Mini.h
src/boards/LimeSDR_X3/: LimeSDR_X3.cpp  LimeSDR_X3.h
src/boards/LimeSDR_XTRX/: LimeSDR_XTRX.cpp  LimeSDR_XTRX.h
src/boards/MMX8/: CMakeLists.txt  MM_X8.cpp  MM_X8.h  RFStream_X8.cpp  RFStream_X8.h
src/comms/PCIe/: CMakeLists.txt  LimePCIe.cpp  LimePCIeDMA.cpp  TRXLooper_PCIE.cpp
src/comms/PCIe/linux-kernel-module/: CMakeLists.txt  limepcie.c  limeuart.c  limeuart.h  version.h
src/comms/PCIe/linux-kernel-module/bsp/: csr.h
src/comms/PCIe/linux-kernel-module/cmake/: add_kernel_module.cmake
src/comms/USB/: USBDMAEmulation.cpp
src/comms/USB/FT601/: CMakeLists.txt
src/comms/USB/FX3/: CMakeLists.txt
src/examples/: CMakeLists.txt  basicRX.cpp  basicTX.cpp  dualRXTX.cpp
src/examples/legacy/: CMakeLists.txt  basicRX.cpp  dualRXTX.cpp  singleRX.cpp
src/include/: CMakeLists.txt
src/include/lime/: LimeSuite.h
src/include/limesuiteng/: DeviceHandle.h  LimePlugin.h  RFStream.h  SDRConfig.h  SDRDevice.h  VersionInfo.cpp.in  VersionInfo.h  VersionInfo.h.in  complex.h  limesuiteng.hpp
src/legacyapi/: CMakeLists.txt
src/memory/: MemoryPool.cpp
src/protocols/: LMS64CProtocol.cpp  TRXLooper.cpp
src/streaming/: CMakeLists.txt  StreamComposite.cpp  StreamComposite.h  TRXLooper.cpp  TRXLooper.h  samplesConversion.h
tests/: CMakeLists.txt  TestRunnerHardware.cpp
tests/boards/: LMS7002M_SDRDevice_Fixture.cpp  LMS7002M_SDRDevice_Fixture.h
tests/streaming/: RFStream_tests.cpp  RFStream_tests.h  streaming.cpp
udev-rules/: 65-limesuiteng-pcie.rules  CMakeLists.txt
